--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>Tailwind CSS Components</title>
   </head>
+  <body>
+    <main class="absolute w-full h-full">
+      <div class="container absolute top-0 w-screen h-screen bg-gray-900">
+        <h1>Hello World</h1>
+      </div>
+    </main>
   </body>
 </html>
