Update tailwind.config and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>Tailwind CSS Components</title>
   </head>
-  <body>
-    <main class="absolute w-full h-full">
-      <div class="container absolute top-0 w-screen h-screen bg-gray-900">
-        <h1>Hello World</h1>
+  <body class="font-body bg-gray-900 text-gray-300">
+    <main>
+      <div class="bg-blue-600 text-center">
+        <h1 class="font-bold text-4xl">Hello World</h1>
+        <h2 class="font-display text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum itaque consequatur inventore possimus facilis veritatis omnis hic harum incidunt architecto.</h2>
       </div>
     </main>
   </body>
